cmake_minimum_required(VERSION 3.25)
project(SystemsEx4A)

set(CMAKE_CXX_STANDARD 14)

add_executable(SystemsEx4A main.cpp sources/Point.hpp sources/Point.cpp sources/Cowboy.hpp sources/Cowboy.cpp sources/Ninja.hpp sources/Ninja.cpp sources/OldNinja.h sources/YoungNinja.hpp sources/YoungNinja.cpp Test.cpp sources/TrainedNinja.hpp sources/Team.hpp sources/Team.cpp sources/TrainedNinja.cpp sources/Team2.hpp sources/Team2.cpp sources/SmartTeam.hpp sources/SmartTeam.cpp sources/Character.hpp)
